--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+.idea/
 /lib
 /classes
 /checkouts
@@ -6,6 +7,7 @@ pom.xml
 pom.xml.asc
 *.jar
 *.class
+*.iml
 .lein-deps-sum
 .lein-failures
 .lein-plugins
